--- a/templates/traffic/categories.html
+++ b/templates/traffic/categories.html
@@ -3,7 +3,7 @@
 
 {% block topbar %}
     <div class="contentbox"></div>
-        <div id="title">Browse by categories:</div>
+        <div id="centeredtitle">Browse by categories:</div>
     
         <div id="categoriespanel">
 
