--- a/templates/traffic/index.html
+++ b/templates/traffic/index.html
@@ -33,7 +33,7 @@
 
 {% block right_body_block %}
 	<div id="r-block" >
-		<div id="map" class="mapindex" data-centre="glasgow" data-postids="{% for p in posts %} {{ p.id }} {% endfor %}" data-zoom=11 ></div>
+		<div id="map" class="mapindex" data-centre="glasgow" data-postids="{% for p in posts %} {{ p.id }} {% endfor %}" data-zoom="11" ></div>
 	</div>
 {% endblock %}
 
