--- a/templates/traffic/writePosts.html
+++ b/templates/traffic/writePosts.html
@@ -4,7 +4,7 @@
 {% block left_body_block %}
      <div id="l-block" class="contentbox">
         <strong id="title"> New Post </strong><br/><br/>
-        <form id="addPosts" method="post" action= "/addposts/" enctype="multipart/form-data">
+        <form id="addPosts" method="post" action= "{% url 'traffic:addposts' %}" enctype="multipart/form-data">
             {% csrf_token %}
             {% for hidden in form.hidden_fields %}
                     {{ hidden }}
