--- a/templates/traffic/post.html
+++ b/templates/traffic/post.html
@@ -36,7 +36,8 @@
 				<button id="stop_btn" 
 					data-postid="{{ post.id }}" 
 					class="btn btn-primary btn-sm" 
-					type="button"> 
+					type="button"
+					data-url="{% url 'traffic:stop' %}"> 
 					<span data-feather="thumbs-up"></span> 
 					{{ post.stopCount }}
 				</button>
@@ -45,7 +46,8 @@
 				<button id="red_btn" 
 					data-postid="{{ post.id }}" 
 					class="btn btn-primary btn-sm" 
-					type="button"> 
+					type="button"
+					data-url="{% url 'traffic:red' %}"> 
 					<span data-feather="thumbs-up"></span> 
 					{{ post.redCount }}
 				</button>
@@ -54,7 +56,8 @@
 				<button id="yellow_btn" 
 					data-postid="{{ post.id }}" 
 					class="btn btn-primary btn-sm" 
-					type="button"> 
+					type="button"
+					data-url="{% url 'traffic:yellow' %}"> 
 					<span data-feather="thumbs-up"></span> 
 					{{ post.yellowCount }}
 				</button>
@@ -63,7 +66,8 @@
 				<button id="green_btn" 
 					data-postid="{{ post.id }}" 
 					class="btn btn-primary btn-sm" 
-					type="button"> 
+					type="button"
+					data-url="{% url 'traffic:green' %}"> 
 					<span data-feather="thumbs-up"></span> 
 					{{ post.greenCount }}
 				</button>
